IMP_py/IMP_DParser.py
# Generated from C:/Users/anitr/OneDrive/Documents/__University/6sem/PVSUS/MD3/IMP_D-TO-AM-TRANSLATOR\IMP_D.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IMP_DParser ( Parser ):

    grammarFileName = "IMP_D.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'if'", "'then'", "'else'", "'fi'", 
                     "'while'", "'do'", "'od'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'and'", "'or'", "'not'", 
                     "';'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WEAKOP", "STRONGOP", "RELATION", "BOOL", 
                      "CONJUNCTION", "DISCJUNCTION", "NOT", "SEMICOLON", 
                      "LPARENTHESIS", "RPARENTHESIS", "NUMBER", "VARNAME", 
                      "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_assign_stmt = 3
    RULE_cond_stmt = 4
    RULE_loop = 5
    RULE_log_expr = 6
    RULE_log_term = 7
    RULE_log_elem = 8
    RULE_condition = 9
    RULE_expr = 10
    RULE_term = 11
    RULE_elem = 12

    ruleNames =  [ "progr", "series", "stmt", "assign_stmt", "cond_stmt", 
                   "loop", "log_expr", "log_term", "log_elem", "condition", 
                   "expr", "term", "elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    WEAKOP=9
    STRONGOP=10
    RELATION=11
    BOOL=12
    CONJUNCTION=13
    DISCJUNCTION=14
    NOT=15
    SEMICOLON=16
    LPARENTHESIS=17
    RPARENTHESIS=18
    NUMBER=19
    VARNAME=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(IMP_DParser.SeriesContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = IMP_DParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.series()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.StmtContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.StmtContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.SEMICOLON)
            else:
                return self.getToken(IMP_DParser.SEMICOLON, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeries" ):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = IMP_DParser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.stmt()
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.SEMICOLON:
                self.state = 29
                self.match(IMP_DParser.SEMICOLON)
                self.state = 30
                self.stmt()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(IMP_DParser.Assign_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(IMP_DParser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(IMP_DParser.LoopContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = IMP_DParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IMP_DParser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.assign_stmt()
                pass
            elif token in [IMP_DParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.cond_stmt()
                pass
            elif token in [IMP_DParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(IMP_DParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(IMP_DParser.ExprContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = IMP_DParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(IMP_DParser.VARNAME)
            self.state = 42
            self.match(IMP_DParser.T__0)
            self.state = 43
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(IMP_DParser.Log_exprContext,0)


        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.SeriesContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.SeriesContext,i)


        def getRuleIndex(self):
            return IMP_DParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = IMP_DParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cond_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(IMP_DParser.T__1)
            self.state = 46
            self.log_expr()
            self.state = 47
            self.match(IMP_DParser.T__2)
            self.state = 48
            self.series()
            self.state = 49
            self.match(IMP_DParser.T__3)
            self.state = 50
            self.series()
            self.state = 51
            self.match(IMP_DParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(IMP_DParser.Log_exprContext,0)


        def series(self):
            return self.getTypedRuleContext(IMP_DParser.SeriesContext,0)


        def getRuleIndex(self):
            return IMP_DParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = IMP_DParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(IMP_DParser.T__5)
            self.state = 54
            self.log_expr()
            self.state = 55
            self.match(IMP_DParser.T__6)
            self.state = 56
            self.series()
            self.state = 57
            self.match(IMP_DParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.Log_termContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.Log_termContext,i)


        def DISCJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.DISCJUNCTION)
            else:
                return self.getToken(IMP_DParser.DISCJUNCTION, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_expr" ):
                listener.enterLog_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_expr" ):
                listener.exitLog_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_expr" ):
                return visitor.visitLog_expr(self)
            else:
                return visitor.visitChildren(self)




    def log_expr(self):

        localctx = IMP_DParser.Log_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_log_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.log_term()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.DISCJUNCTION:
                self.state = 60
                self.match(IMP_DParser.DISCJUNCTION)
                self.state = 61
                self.log_term()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.Log_elemContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.Log_elemContext,i)


        def CONJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.CONJUNCTION)
            else:
                return self.getToken(IMP_DParser.CONJUNCTION, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_log_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_term" ):
                listener.enterLog_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_term" ):
                listener.exitLog_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_term" ):
                return visitor.visitLog_term(self)
            else:
                return visitor.visitChildren(self)




    def log_term(self):

        localctx = IMP_DParser.Log_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_log_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.log_elem()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.CONJUNCTION:
                self.state = 68
                self.match(IMP_DParser.CONJUNCTION)
                self.state = 69
                self.log_elem()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(IMP_DParser.ConditionContext,0)


        def BOOL(self):
            return self.getToken(IMP_DParser.BOOL, 0)

        def LPARENTHESIS(self):
            return self.getToken(IMP_DParser.LPARENTHESIS, 0)

        def log_expr(self):
            return self.getTypedRuleContext(IMP_DParser.Log_exprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(IMP_DParser.RPARENTHESIS, 0)

        def VARNAME(self):
            return self.getToken(IMP_DParser.VARNAME, 0)

        def NOT(self):
            return self.getToken(IMP_DParser.NOT, 0)

        def getRuleIndex(self):
            return IMP_DParser.RULE_log_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_elem" ):
                listener.enterLog_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_elem" ):
                listener.exitLog_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_elem" ):
                return visitor.visitLog_elem(self)
            else:
                return visitor.visitChildren(self)




    def log_elem(self):

        localctx = IMP_DParser.Log_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_log_elem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IMP_DParser.NOT:
                self.state = 75
                self.match(IMP_DParser.NOT)


            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 78
                self.condition()
                pass

            elif la_ == 2:
                self.state = 79
                self.match(IMP_DParser.BOOL)
                pass

            elif la_ == 3:
                self.state = 80
                self.match(IMP_DParser.LPARENTHESIS)
                self.state = 81
                self.log_expr()
                self.state = 82
                self.match(IMP_DParser.RPARENTHESIS)
                pass

            elif la_ == 4:
                self.state = 84
                self.match(IMP_DParser.VARNAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.ExprContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(IMP_DParser.RELATION, 0)

        def getRuleIndex(self):
            return IMP_DParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = IMP_DParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expr()
            self.state = 88
            self.match(IMP_DParser.RELATION)
            self.state = 89
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.TermContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.TermContext,i)


        def WEAKOP(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.WEAKOP)
            else:
                return self.getToken(IMP_DParser.WEAKOP, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = IMP_DParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.term()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.WEAKOP:
                self.state = 92
                self.match(IMP_DParser.WEAKOP)
                self.state = 93
                self.term()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMP_DParser.ElemContext)
            else:
                return self.getTypedRuleContext(IMP_DParser.ElemContext,i)


        def STRONGOP(self, i:int=None):
            if i is None:
                return self.getTokens(IMP_DParser.STRONGOP)
            else:
                return self.getToken(IMP_DParser.STRONGOP, i)

        def getRuleIndex(self):
            return IMP_DParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = IMP_DParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.elem()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IMP_DParser.STRONGOP:
                self.state = 100
                self.match(IMP_DParser.STRONGOP)
                self.state = 101
                self.elem()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(IMP_DParser.NUMBER, 0)

        def VARNAME(self):
            return self.getToken(IMP_DParser.VARNAME, 0)

        def LPARENTHESIS(self):
            return self.getToken(IMP_DParser.LPARENTHESIS, 0)

        def expr(self):
            return self.getTypedRuleContext(IMP_DParser.ExprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(IMP_DParser.RPARENTHESIS, 0)

        def getRuleIndex(self):
            return IMP_DParser.RULE_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem" ):
                listener.enterElem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem" ):
                listener.exitElem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElem" ):
                return visitor.visitElem(self)
            else:
                return visitor.visitChildren(self)




    def elem(self):

        localctx = IMP_DParser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elem)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IMP_DParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(IMP_DParser.NUMBER)
                pass
            elif token in [IMP_DParser.VARNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(IMP_DParser.VARNAME)
                pass
            elif token in [IMP_DParser.LPARENTHESIS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.match(IMP_DParser.LPARENTHESIS)
                self.state = 110
                self.expr()
                self.state = 111
                self.match(IMP_DParser.RPARENTHESIS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





